8/28/12 delete PointSlopeLine.withColor, misc docs
8/28/12 major change: use generics to enforce use of SlopeInterceptLine, instead of "assert( line.x1 == 0 )" [67467]
8/27/12 move point tool to the foreground when drag starts
8/27/12 change line class hierarchy, SlopeInterceptLine extends PointSlopeLine
8/27/12 change order of constructor params to "point,slope" and "slope,intercept" to match line-form names
8/27/12 SlopeInterceptModel extends PointSlopeModel
8/27/12 first step in collapsing LineFormsModel hierarchy
8/27/12 move more responsibility into LineFormsModel, since slope-intercept is a special case of point-slope
8/27/12 delete InterceptDragHandler, it's a special case of PointDragHandler with x1 fixed at zero
8/27/12 move line manipulator functionality into LineFormsGraphNode base class, because slope-intercept is a special case of point-slope, with x1 fixed at zero
8/27/12 rename LineFormsGraphNode, doc that it's a base class for tabs 1 & 2
8/27/12 doc and cleanup of common classes
8/27/12 doc and cleanup of classes that are specific to tabs 1 & 2
8/27/12 place point tools close together
8/27/12 add orientation to point tool, make one point "up", one point "down"
8/24/12 don't request confirmation for "New Game" button
8/21/12 add assertions to verify x1==0 when we're expecting a slope-intercept line
8/21/12 add assertions to equation factory constructors
8/21/12 simplify placement of slope manipulator for slope-intercept lines
8/21/12 rename methods that deal with add/remove of lines in LineGraphNode, doc
8/21/12 memory leak in list of lines solved by other previous change (updating spinners atomically)
8/21/12 bug fix: update spinners atomically, so that dragging slope manipulator can't create a line with slope=0/0
8/21/12 delete WellDefinedLineProperty, make slope spinners handle avoidance of slope=0/0, add assertion check for slope=0/0 to StraightLine
8/21/12 change order of args to constructors in SpinnerNode hierarchy