@@ -1,3 +1,4 @@
+8/28/12 introduce generics in linegame package
 8/28/12 delete PointSlopeLine.withColor, misc docs
 8/28/12 major change: use generics to enforce use of SlopeInterceptLine, instead of "assert( line.x1 == 0 )" [67467]
 8/27/12 move point tool to the foreground when drag starts
